# RustyCalc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: history.rs  main.rs
src/conversions/: area.rs  energy.rs  force.rs  length.rs  mass.rs  mod.rs  power.rs  temperature.rs  torque.rs  volume.rs
src/evaluator/: constants.rs  functions.rs  mod.rs  parser.rs  tokeniser.rs
src/test/: evaluator_tests.rs  mod.rs
src/ui/: calc_window.rs  calculator.rs  calculator_app.rs  func_popup.rs  menu.rs  messages.rs  mod.rs  preferences.rs  window.rs
