[package]
name = "rusty_calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.9"
lazy_static = "^1.4.0"
log = "^0.4"
palette = "^0.7.6"
preferences = "^1.1.0"
simplelog = "0.12.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
rev = "cdb18e610a72b4a025d7e1890140393adee5b087"
features = ["canvas", "multi-window"]
