[package]
name = "rusty_calc"
version = "0.1.0"
edition = "2021"
description = "An algebraic calculator with Graphical User Interface"
documentation = "https://docs.rs/preferences"
repository = "https://github.com/shartrec/RustyCalc"
readme = "README.md"
keywords = ["tool", "user", "gui"]
license = "MIT"

[dependencies]
home = "0.5.9"
log = "^0.4"
palette = "^0.7.6"
preferences = "2.0.0"
simplelog = "0.12.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
version = "0.13.0-dev"
features = ["advanced"]

[dependencies.iced_aw]
git = "https://github.com/iced-rs/iced_aw.git"
branch = "main"
default-features = false
features = ["menu"]
